# RacecarSimulatorArchiv

./: .gitignore  README.md  SHA256SUMS.txt  VERSION_MANIFEST.tsv
archive/internal_backups/: cost_evaluator_v2_backup.cpp  race_driver_v2_backup.yaml  speed_planner_v2_backup.cpp
archive/old_configs/: race_driver.yaml.before_speed_delta_075_20260502_093453
archive/race_driver_versions/before_hysteresis_20260502_104926/config/: race_driver.yaml.best_boundary_mpc_aggressive_90
archive/race_driver_versions/before_hysteresis_20260502_104926/include/race_driver/: lap_time_evaluator.hpp  race_driver_node.hpp.before_mpc_lite_20260502_041032
archive/race_driver_versions/before_hysteresis_20260502_104926/src/: lap_time_evaluator.cpp
archive/race_driver_versions/best_boundary_mpc_892_delta075/: CMakeLists.txt
archive/race_driver_versions/best_boundary_mpc_892_delta075/config/: race_driver.yaml.before_boundary_mpc_fast_20260502_042254  race_driver.yaml.best_boundary_mpc_892_delta075  race_driver.yaml.mpc_lite_slow_fail_20260502_041416
archive/race_driver_versions/best_boundary_mpc_892_delta075/src/: global_raceline_optimizer.cpp  mpc_lite_controller.cpp  v5_racing_planner.cpp.before_ref_20260502_040355
archive/race_driver_versions/best_boundary_mpc_897/src/: raceline_planner.cpp
archive/race_driver_versions/best_boundary_mpc_92/config/: race_driver.yaml.v5_safe_20260502_033949
archive/race_driver_versions/best_boundary_mpc_92/launch/: race_driver.launch.py
archive/race_driver_versions/best_boundary_mpc_92/src/: map_rollout_planner.cpp  obstacle_detector.cpp  v5_racing_planner.cpp.before_clearance_guard_20260502_033221
archive/race_driver_versions/best_boundary_mpc_aggressive_90/config/: race_driver.yaml.before_mpc_lite_20260502_041032  race_driver.yaml.best_boundary_mpc_92
archive/race_driver_versions/candidate_steer_rate_010/config/: race_driver.yaml.before_v5_test_20260502_032450  race_driver.yaml.candidate_steer_rate_010  race_driver.yaml.v5_attack_030_65_20260502_034316
archive/race_driver_versions/candidate_steer_rate_010/src/: racing_reference.cpp  v5_racing_planner.cpp
archive/race_driver_versions/current_main/src/: state_manager.cpp
archive/race_driver_versions/hysteresis_slow_20260502_105510/config/: race_driver.yaml.v5_safe_fast_031_65_20260502_040355
archive/race_driver_versions/hysteresis_slow_20260502_105510/src/: boundary_corridor_planner.cpp  boundary_corridor_planner.cpp.before_hysteresis_20260502_104938  controller.cpp  race_driver_node.cpp  race_driver_node.cpp.before_mpc_lite_20260502_041032
archive/race_driver_versions/v3_final_before_v4/: CMakeLists.txt
archive/race_driver_versions/v3_final_before_v4/config/: race_driver.yaml
archive/race_driver_versions/v3_final_before_v4/src/: controller.cpp  race_driver_node.cpp  raceline_planner.cpp  track_manager.cpp
archive/race_driver_versions/v4_5_6_base_20260502_031944/: CMakeLists.txt
archive/race_driver_versions/v4_5_6_base_20260502_031944/config/: race_driver.yaml
archive/race_driver_versions/v4_5_6_base_20260502_031944/include/race_driver/: cost_evaluator.hpp  race_driver_node.hpp  state_manager.hpp
archive/race_driver_versions/v4_5_6_base_20260502_031944/src/: main.cpp  race_driver_node.cpp  track_manager.cpp
archive/race_driver_versions/v5_safe_fast_031_65/: CMakeLists.txt  package.xml
archive/race_driver_versions/v5_safe_fast_031_65/src/: race_driver_node.cpp  speed_profile_optimizer.cpp
archive/race_driver_versions/verified_boundary_mpc_aggressive_90/config/: race_driver.yaml.before_clearance_guard_20260502_033221  race_driver.yaml.before_mpc_aggressive_speed_20260502_091300  race_driver.yaml.ref_slow_fail_20260502_040721
archive/race_driver_versions/verified_boundary_mpc_aggressive_90/src/: candidate_generator.cpp  cost_evaluator.cpp
archive/reference_modules/pure_pursuit/: CMakeLists.txt  package.xml
docs/: CONTROL_VERSION_ARCHIVE.md  VERSION_SELECTION_NOTE.md
src/race_driver/include/race_driver/: controller.hpp  map_rollout_planner.hpp  racing_reference.hpp
src/race_driver/src/: controller.cpp  occupancy_grid_manager.cpp  speed_planner.cpp
src/racecar_simulator/: CMakeLists.txt  package.xml
src/racecar_simulator/launch/: simulator.launch.py
src/racecar_simulator/maps/f1tenth_racetracks/iccas2025/: iccas2025_1.pgm  iccas2025_center.csv  iccas2025_centerline.csv  iccas2025_left.csv  iccas2025_map.pgm  iccas2025_map.yaml  iccas2025_path.csv  iccas2025_path_spline.csv  iccas2025_right.csv  iccas2025_width_info.csv
src/racecar_simulator/maps/f1tenth_racetracks/icra2025/: icra2025_centerline.csv  icra2025_map.pgm  icra2025_map.yaml
src/racecar_simulator/maps/lane_process/: track_widths_one_lap.py
src/racecar_simulator/maps/lane_process/berlin/: berlin.pgm  berlin.yaml  berlin_centerline_c.csv  berlin_left.csv  berlin_path.csv  berlin_path_aligned.csv  berlin_right.csv
src/racecar_simulator/params/: race_stats.yaml  simulation.yaml  simulator.rviz
src/racecar_simulator/src/: map_publisher.cpp  param_loader.cpp  race_stat.cpp  simulator.cpp
tools/: activate_race_driver_version.sh  check_archive_integrity.sh  list_race_driver_versions.sh  patch_clone_paths.sh
(+19 files in other folders)
